# CalibrationWebApp

./: .gitignore  Cargo.toml  README.md
src/: generator.rs  lib.rs  main.rs  middleware.rs  powermeter.rs
src/templates/: algorithm.tpl  generator.tpl  header.tpl  mainpage.tpl  options.tpl  powermeter.tpl
templates/: algorithm.tpl  generator.tpl  mainpage.tpl  options.tpl  powermeter.tpl  report.tpl  reports.tpl
tests/: functional_tests.py  generator.rs  powermeter.rs  unit.rs
