[package]
name = "calibration_web_app"
version = "0.2.0"
authors = ["serejkaaa512"]

[dependencies]
nickel = "*"
url = "*"
groupable = "*"
typemap="*"
plugin="*"
rustc-serialize = "*"
time="*"
regex="*"
simple_graph = { git = "https://github.com/serejkaaa512/Simple_Graph.git" }

[dependencies.mysql]
mysql = "*"
default-features = false
features = ["pipe"]
